--- a/style.css
+++ b/style.css
@@ -1,300 +1,347 @@
 * {
-    margin: 0;
-    padding: 0;
-    font-family: "Roboto", sans-serif;
-  }
-  .container {
-    background: #302f2f;
-  }
-  .nav {
-    width: 90%;
-    margin: auto;
-    padding: 20px 0;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
+  margin: 0;
+  padding: 0;
+  font-family: "Roboto", sans-serif;
+}
+.container {
+  background: #302f2f;
+  position: sticky;
+  top: 0;
+}
+
+.nav {
+  width: 90%;
+  margin: auto;
+  padding: 20px 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.logo {
+  width: 130px;
+  cursor: pointer;
+}
+
+.nav ul li {
+  list-style: none;
+  display: inline-block;
+  margin: 0 20px;
+  position: relative;
+}
+
+.nav ul li a {
+  text-decoration: none;
+  color: white;
+}
+
+.nav ul li::after {
+  content: "";
+  height: 3px;
+  width: 0;
+  background: #7eabae;
+  position: absolute;
+  left: 0;
+  bottom: -5px;
+  transition: 0.5s;
+}
+
+.nav ul li:hover::after {
+  width: 100%;
+}
+
+
+#about {
+  width: 100%;
+  text-align: left;
+  color: white;
+  background-image: url(img/bg.png);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  padding: 100px 0;
+  margin: 0;
+  height: 70vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+#about h1 {
+  color: #7eabae;
+  font-size: 80px;
+  padding-left: 50px;
+}
+#about h2 {
+  font-size: 70px;
+  margin-top: 50px;
+  padding-left: 50px;
+}
+
+#about p {
+  margin: 20px 0;
+  font-size: 18px;
+  font-weight: 100;
+  line-height: 30px;
+  width: 52%;
+  padding-left: 53px;
+}
+.type{
+  font-size: 36px;
+	color:#fff;
+  padding: 10px 0 0  50px;
+}
+.type span{
+  font-size: 48px;
+	color:#7eabae;
+	font-weight: bold;
+}
+#experience {
+  width: 100%;
+  text-align: right;
+  color: white;
+  background-image: url(img/exp.png);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  padding: 100px 0;
+  margin: 0;
+  height: 70vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.exp-h1 {
+  padding-right: 100px;
+  margin-bottom: 20px; /* Adjust as needed */
+}
+
+#experience h1 {
+  color: #eadbc4;
+  font-size: 80px;
+}
+
+.experience-container {
+  width: 100%;
+  display: flex;
+  justify-content: right;
+}
+
+#experience ul {
+  list-style: none;
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+#experience li {
+  width: 100%;
+  margin: 20px 0;
+  padding-right: 100px;
+}
+
+#experience h3 {
+  color: #302f2f;
+  font-size: 36px;
+}
+
+#experience p {
+  font-size: 22px;
+  font-weight: 100;
+  line-height: 1.5;
+}
+
+#education {
+  width: 100%;
+  text-align: left;
+  color: white;
+  background-image: url(img/educ.png);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  padding: 100px 0;
+  margin: 0;
+  height: 70vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.educ-h1 {
+  margin-bottom: 20px;
+  padding-left: 100px;
+}
+
+#education h1 {
+  color: #7eabae;
+  font-size: 80px;
+}
+
+.education-container {
+  width: 100%;
+  display: flex;
+  justify-content: left;
+}
+
+#education ul {
+  list-style: none;
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+#education li {
+  width: 100%;
+  margin: 20px 0;
+  text-align: left;
+  padding-left: 100px;
+}
+
+#education h3 {
+  color: #eadbc4;
+  font-size: 36px;
+}
+
+#education p {
+  font-size: 22px;
+  font-weight: 100;
+  line-height: 1.5;
+}
+#skills {
+  width: 100%;
+  text-align: right;
+  color: white;
+  background-image: url(img/skill.png);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  padding: 100px 0;
+  margin: 0;
+  height: 70vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.skills-h1 {
+  padding-right: 100px;
+  margin-bottom: 20px; /* Adjust as needed */
+}
+
+#skills h1 {
+  color: #eadbc4;
+  font-size: 80px;
+}
+
+.skills-container {
+  padding-right: 100px;
+  display: inline-block;
+  justify-content: right;
+}
+
+#skills p {
+  width: 100%;
+  margin: 20px 0;
+  font-size: 30px;
+}
+#projects {
+  padding-top: 20px;
+  text-align: center;
+  background-color: #302f2f;
+}
+#projects h1 {
+  color: #7eabae;
+  font-size: 80px;
+}
+#projects h2 {
+  color: #eadbc4;
+  font-size: 50px;
+}
+#projects img {
+  width: 500px;
+  margin: 10px 10px;
+}
+#contact {
+  width: 100%;
+  text-align: left;
+  color: white;
+  background-image: url(img/phone.png);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  padding: 100px 0;
+  margin: 0;
+  height: 70vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.contact-h1 {
+  padding-left: 100px;
+  margin-bottom: 20px; /* Adjust as needed */
+}
+
+#contact h1 {
+  color: #eadbc4;
+  font-size: 80px;
+}
+
+.contact-container {
+  padding-left: 100px;
+  display: inline-block;
+  justify-content: right;
+}
+
+#contact p {
+  width: 100%;
+  margin: 20px 0;
+  font-size: 30px;
+}
+#contact button {
+  background-color: transparent;
+  border: 0.125em solid #1a1a1a;
+  border-radius: 0.9375em;
+  box-sizing: border-box;
+  color: #3b3b3b;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: normal;
+  margin: 0;
+  min-height: 3.75em;
+  min-width: 0;
+  outline: none;
+  padding: 1em 2.3em;
+  text-align: center;
+  transition: all 300ms cubic-bezier(0.23, 1, 0.32, 1);
   
-  .logo {
-    width: 130px;
-    cursor: pointer;
-  }
-  
-  .nav ul li {
-    list-style: none;
-    display: inline-block;
-    margin: 0 20px;
-    position: relative;
-  }
-  
-  .nav ul li a {
-    text-decoration: none;
-    color: white;
-  }
-  
-  .nav ul li::after {
-    content: "";
-    height: 3px;
-    width: 0;
-    background: #7eabae;
-    position: absolute;
-    left: 0;
-    bottom: -5px;
-    transition: 0.5s;
-  }
-  
-  .nav ul li:hover::after {
-    width: 100%;
-  }
-  
-  #about {
-    width: 100%;
-    text-align: left;
-    color: white;
-    background-image: url(bg.png);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    padding: 100px 0;
-    margin: 0;
-    height: 70vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
-  #about h1 {
-    color: #7eabae;
-    font-size: 80px;
-    padding-left: 50px;
-  }
-  #about h2 {
-    font-size: 70px;
-    margin-top: 50px;
-    padding-left: 50px;
-  }
-  
-  #about p {
-    margin: 20px 0;
-    font-size: 16px;
-    font-weight: 100;
-    line-height: 30px;
-    width: 52%;
-    padding-left: 53px;
-  }
-  #experience {
-    width: 100%;
-    text-align: right;
-    color: white;
-    background-image: url(exp.png);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    padding: 100px 0;
-    margin: 0;
-    height: 70vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-   
-  }
-  
-  .exp-h1 {
-    padding-right: 100px;
-    margin-bottom: 20px; /* Adjust as needed */
-  }
-  
-  #experience h1 {
-    color: #eadbc4;
-    font-size: 80px;
-  }
-  
-  .experience-container {
-    width: 100%;
-    display: flex;
-    justify-content: right;
-  }
-  
-  #experience ul {
-    list-style: none;
-    padding: 0;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-  }
-  
-  #experience li {
-    width: 100%;
-    margin: 20px 0;
-    padding-right: 100px;
-  }
-  
-  #experience h3 {
-    color: #302f2f;
-    font-size: 36px;
-  }
-  
-  #experience p {
-    font-size: 22px;
-    font-weight: 100;
-    line-height: 1.5;
-  }
-  
-  #education{
-    width: 100%;
-    text-align: left;
-    color: white;
-    background-image: url(educ.png);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    padding: 100px 0;
-    margin: 0;
-    height: 70vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
-  .educ-h1 {
-    margin-bottom: 20px;
-    padding-left: 100px;
-  }
-  
-  #education h1 {
-    color: #7eabae;
-    font-size: 80px;
-  }
-  
-  .education-container {
-    width: 100%;
-    display: flex;
-    justify-content: left;
-    
-  }
-  
-  #education ul {
-    list-style: none;
-    padding: 0;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-  }
-  
-  #education li {
-    width: 100%;
-    margin: 20px 0;
-    text-align: left;
-    padding-left: 100px;
-  }
-  
-  #education h3 {
-    color: #eadbc4;
-    font-size: 36px;
-  }
-  
-  #education p {
-    font-size: 22px;
-    font-weight: 100;
-    line-height: 1.5;
-  }
-  #skills {
-    width: 100%;
-    text-align: right;
-    color: white;
-    background-image: url(img/skill.png);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    padding: 100px 0;
-    margin: 0;
-    height: 70vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-   
-  }
-  
-  .skills-h1 {
-    padding-right: 100px;
-    margin-bottom: 20px; /* Adjust as needed */
-  }
-  
-  #skills h1 {
-    color: #eadbc4;
-    font-size: 80px;
-  }
-  
-  .skills-container {
-    padding-right: 100px;
-    display: inline-block;
-    justify-content: right;
-  }
-  
-  #skills p {
-    width: 100%;
-    margin: 20px 0;
-    font-size: 30px;
-    
-  }
-  #projects{
-    padding-top: 20px;
-    text-align: center;
-    background-color: #302f2f;
-  
-  }
-  #projects h1 {
-    color: #7eabae;
-    font-size: 80px;
-  }
-  #projects h2 {
-    color: #eadbc4;
-    font-size: 50px;
-  }
-  #projects img{
-    width: 500px;
-    margin: 10px 10px;
-  }
-  #contact {
-    width: 100%;
-    text-align: left;
-    color: white;
-    background-image: url(img/phone.png);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    padding: 100px 0;
-    margin: 0;
-    height: 70vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-   
-  }
-  
-  .contact-h1 {
-    padding-left: 100px;
-    margin-bottom: 20px; /* Adjust as needed */
-  }
-  
-  #contact h1 {
-    color: #eadbc4;
-    font-size: 80px;
-  }
-  
-  .contact-container {
-    padding-left: 100px;
-    display: inline-block;
-    justify-content: right;
-  }
-  
-  #contact p {
-    width: 100%;
-    margin: 20px 0;
-    font-size: 30px;
-  }
-  footer {
-    background-color: #302f2f;
-    color: #fff;
-    text-align: center;
-    padding: 0.1em;
-  }
-  
+}
+
+#contact button:disabled {
+  pointer-events: none;
+}
+
+#contact button:hover {
+  color: #fff;
+  background-color: #1a1a1a;
+  box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+  transform: translateY(-2px);
+}
+
+#contact button:active {
+  box-shadow: none;
+  transform: translateY(0);
+}
+#contact button a{
+  text-decoration: none;
+  color: white;
+}
+footer {
+  background-color: #302f2f;
+  color: #fff;
+  text-align: center;
+  padding: 0.1em;
+}
